--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.3",
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "ts-node": "^10.9.1"
   }
